    * Fixed crash if user clicks rating widget on the current track applet while no
      track is playing (which is possible since there is a slight delay before the 
      applet switches "mode"). (BR 215471)
    * Made "Last.fm Love" (and potentially other global actions avaiable for all 
      tracks) correctly show up in the Current Track applet.

VERSION 2.2.2-beta1
  FEATURES
    * Dailymotion video can now be rendered within the applet in HQ if HQ is selected 
      in the video applet settings.
    * Rewrote podcast feed parser to correctly parse XML. Now even RSS 1.0 and
      Atom feeds are supported. Patches by Mathias Panzenböck.
    * Rating of playlist items can now be filtered, using "rating:#" notation.
    * When removing a podcast subscription, ask for confirmation and offer to delete the
      downloaded episodes. Patch by Frank Meerkötter.
    * Font of lyrics applet is configurable in the lyrics applet setting page.
    * BPM editing, sorting, and filtering have been implemented. (BR 214056)
      Patch by Pierre Dumuid <pmdumuid@gmail.com>.
    * Made it possible to change a podcast channel's URL. (BR 195204)
    * Also support feed:// urls for subscribing to podcasts.
    * Limited the number of simultaneous podcast updates and downloads to four.
      This can be configured separately in the "amarokrc" configuration file.
    * Import podcast subscriptions from OPML.
    * Show HTML info for podcast channels that support this. Patches by
      Mathias Panzenböck. (BR 193357)
    * Ampache Service now shows Service info from last.fm
    * Moodbar support is back. Can be shown in progress bar or in the playlist.
      The 4 visual styles from Amarok 1 (normal, angry, frozen and happy) are 
      all supported. This feature requires that moodbars files are already present.
    * Cover images can now be fetched via HTTP. (BR 176899)
    * Custom Labels has returned.  Assign labels from the tag dialog, and